--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,8 +3,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{ page.title }}</title>
-<link href="css/global.css" rel="stylesheet" type="text/css" />
-<link href="css/article.css" rel="stylesheet" type="text/css" />
+<link href="css/global_01.css" rel="stylesheet" type="text/css" />
+<link href="css/content_article_01.css" rel="stylesheet" type="text/css" />
+<link href="css/header_tag_01.css" rel="stylesheet" type="text/css" />
+<link href="css/header_menu_01.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -15,12 +17,10 @@
             	<span style="font-size:12px; color:#333; ">见证我成长的足迹</span>
             </div>
             <ul class="menu">
-                <li>首页</li>
-  				<li>c/c++</li>
-                <li>网络编程</li>
-                <li>Linux</li>
-                <li>软件应用</li>
-                <li>博客说明</li>
+                <li><a href="{{ site.url }}">首页</a></li>
+  				{% for category in site.categories %}
+                <li><a href="/categories/{{ category | first }}">{{ category | first }} </a></li>
+                {% endfor %}
             </ul>
         </div>
         <div id="content">
