--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -4,9 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{ page.title }}</title>
 <link href="css/global_01.css" rel="stylesheet" type="text/css" />
-<link href="css/content_article_01.css" rel="stylesheet" type="text/css" />
 <link href="css/header_tag_01.css" rel="stylesheet" type="text/css" />
 <link href="css/header_menu_01.css" rel="stylesheet" type="text/css" />
+<link href="css/content_article_01.css" rel="stylesheet" type="text/css" />
+<link href="css/content_tool_01.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,8 +19,8 @@
             </div>
             <ul class="menu">
                 <li><a href="{{ site.url }}">首页</a></li>
-  				{\% for category in site.categories %\}
-                <li><a href="/categories/{\{ category | first }\}/">{\{ category | first }\} </a></li>
+  				{% for category in site.categories %}
+                <li><a href="/categories/{{ category | first }}">{{ category | first }} </a></li>
                 {% endfor %}
             </ul>
         </div>
@@ -31,17 +32,7 @@
                     	<span class="article_publish_time">2014-04-17</span>
                     	<span class="article_author">xzben</span>
                         <span class="article_category">c/c++</span>
-                    </p>
-                    <p class="article_preview">
-                    	文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容
-                    </p>
-                </div>
-                <div class="article">
-                	<p class="article_title">文章标题</p>
-                    <p class="article_property"> 
-                    	<span class="article_publish_time">2014-04-17</span>
-                    	<span class="article_author">xzben</span>
-                        <span class="article_category">c/c++</span>
+						<span class="article_tag">tags</span>
                     </p>
                     <p class="article_preview">
                     	文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容
@@ -50,15 +41,35 @@
             </div>
             <div id="tools">
             	<div class="tool">
-                	<p class="tool_title">tool titles</p>
+                	<p class="tool_title">Category</p>
                 	<div class="tool_content">
-                    	aaaa
+                    	<ul id="category">
+                           <li><a href="#">c++ <span>(1)<span></a></li>
+                           	{% for category in site.categories %}
+							<li><a href="/categories/{{ category | first }}" title="view all posts">{{ category | first }}<span>({{ category | last | size }})</span></a></li>
+							{% endfor %}
+                        </ul>
                     </div>
                 </div>
                 <div class="tool">
-                	<p class="tool_title">tool titles</p>
+                	<p class="tool_title">近期文章</p>
                 	<div class="tool_content">
-                    	aaa
+                    	<ul id="latest_article_list">
+							{% for post in site.posts %}
+							<li>{{ post.date | date_to_string }}
+							<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+							{% endfor %}
+                        </ul>
+                    </div>
+                </div>
+                <div class="tool">
+                	<p class="tool_title">我的链接</p>
+                	<div class="tool_content">
+                    	<ul id="my_links">
+                           <li><a href="#">我的链接</a></li>
+                           <li><a href="#">我的链接</a></li>
+                           <li><a href="#">文章名字</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
