--- a/css/content_tool_01.css
+++ b/css/content_tool_01.css
@@ -24,6 +24,8 @@
 
 .tool > .tool_content > ul > li{
 	list-style:none;
+	border-bottom:#999 dashed 1px;
+	padding:2px 10px;
 }
 
 .tool > .tool_content > ul > li > a{
@@ -32,14 +34,17 @@
 	font-size:18px;
 	font-weight:bolder;
 }
+
+.tool > .tool_content > ul > li > a > span{
+	color:#F00;
+	font-size:14px;
+}
+
 .tool #category li{
-	border-bottom:#999 dashed 1px;
-	list-style:none;
-	padding:2px 10px;
+
 }
 
 .tool #category li > a > span{
-	color:#F00;
-	font-size:14px;
+	
 }
 
