--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,20 +25,7 @@
             </ul>
         </div>
         <div id="content">
-        	<div id="article_list">
-            	<div class="article">
-                	<p class="article_title">文章标题</p>
-                    <p class="article_property"> 
-                    	<span class="article_publish_time">2014-04-17</span>
-                    	<span class="article_author">xzben</span>
-                        <span class="article_category">c/c++</span>
-						<span class="article_tag">tags</span>
-                    </p>
-                    <p class="article_preview">
-                    	文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容
-                    </p>
-                </div>
-            </div>
+        	{{ page.content }}
             <div id="tools">
             	<div class="tool">
                 	<p class="tool_title">Category</p>
