--- a/css/content_tool_01.css
+++ b/css/content_tool_01.css
@@ -25,7 +25,9 @@
 .tool > .tool_content > ul > li{
 	list-style:none;
 	border-bottom:#999 dashed 1px;
-	padding:2px 10px;
+	padding:5px 20px 5px 0px;
+	overflow:hidden;
+	white-space:nowrap;
 }
 
 .tool > .tool_content > ul > li > a{
@@ -35,6 +37,10 @@
 	font-weight:bolder;
 }
 
+.tool > .tool_content > ul > li > a:hover{
+	color:#900;
+	padding-left:20px;
+}
 .tool > .tool_content > ul > li > a > span{
 	color:#F00;
 	font-size:14px;
@@ -45,6 +51,24 @@
 }
 
 .tool #category li > a > span{
+	
+}
+
+.tool #latest_article_list li > a {
+	text-decoration:none;
+	font-size:14px;
+}
+
+.tool #latest_article_list li > a > span{
+	font-size:8px;
+}
+
+.tool #my_links li a{
+	font-size:14px;
+	font-weight:normal;
+}
+
+.tool #my_links li > a > span{
 	
 }
 
