--- a/_layouts/article_page.html
+++ b/_layouts/article_page.html
@@ -18,12 +18,15 @@
             </div>
             <ul class="menu">
                 <li><a href="{{ site.url }}">首页</a></li>
+  				{% for category in site.categories %}
+                <li><a href="/categories/{{ category | first }}">{{ category | first }} </a></li>
+                {% endfor %}
             </ul>
         </div>
         <div id="content">
         	<div id="article_show">
             	<div class="article">
-                	<p class="article_title">文章标题</p>
+                	<p class="article_title">{{ page.title }}</p>
                     <p class="article_property"> 
                     	<span class="article_publish_time">2014-04-17</span>
                     	<span class="article_author">xzben</span>
@@ -31,7 +34,7 @@
                         <span class="article_tag">tag</span>
                     </p>
                     <p class="article_full_text">
-                    	文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容
+                    	{{ page.content }}
                     </p>
                 </div>
             </div>
@@ -40,9 +43,9 @@
                 	<p class="tool_title">Category</p>
                 	<div class="tool_content">
                     	<ul id="category">
-                           <li><a href="#">c++ <span>(1)<span></a></li>
-                           <li><a href="#">c++ <span>(1)<span></a></li>
-                           <li><a href="#">c++ <span>(1)<span></a></li>
+                           	{% for category in site.categories %}
+							<li><a href="/categories/{{ category | first }}" title="view all posts">{{ category | first }}<span>({{ category | last | size }})</span></a></li>
+							{% endfor %}
                         </ul>
                     </div>
                 </div>
@@ -50,9 +53,9 @@
                 	<p class="tool_title">近期文章</p>
                 	<div class="tool_content">
                     	<ul id="latest_article_list">
-                           <li><a href="#" title="[06 Jan 2013]">文章名字文章名字文章名字文章名字文章名字文章名字文章名字文章名字</a></li>
-                           <li><a href="#">文章名字</a></li>
-                           <li><a href="#">文章名字</a></li>
+							{% for post in site.posts %}
+							<li><a href="{{ post.url }}">{{ post.title }}</a><span>[{{ post.date | date_to_string }}]</span></li>
+							{% endfor %}
                         </ul>
                     </div>
                 </div>
