Revert "绝对路径css文件"
This reverts commit de627b5790d4a03db1190e41df8f636eccfac817.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>{{ page.title }}</title>
-<link href="{{ site.baseurl }}/css/global_01.css" rel="stylesheet" type="text/css" />
-<link href="{{ site.baseurl }}/css/header_tag_01.css" rel="stylesheet" type="text/css" />
-<link href="{{ site.baseurl }}/css/header_menu_01.css" rel="stylesheet" type="text/css" />
-<link href="{{ site.baseurl }}/css/content_article_01.css" rel="stylesheet" type="text/css" />
-<link href="{{ site.baseurl }}/css/content_tool_01.css" rel="stylesheet" type="text/css" />
+<link href="css/global_01.css" rel="stylesheet" type="text/css" />
+<link href="css/header_tag_01.css" rel="stylesheet" type="text/css" />
+<link href="css/header_menu_01.css" rel="stylesheet" type="text/css" />
+<link href="css/content_article_01.css" rel="stylesheet" type="text/css" />
+<link href="css/content_tool_01.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
