--- a/css/global_01.css
+++ b/css/global_01.css
@@ -17,6 +17,14 @@ body{ background:#CCC;}
 	float:left;
 }
 
+#content > #article_show{
+	padding:10px;
+	width:740px;
+	border:#333 solid 2px;
+	border-radius:10px;
+	float:left;
+}
+
 #content > #tools{
 	padding:5px;
 	width:240px;
