--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -18,14 +18,27 @@
             	<span style="font-size:12px; color:#333; ">见证我成长的足迹</span>
             </div>
             <ul class="menu">
-                <li><a href="{{ site.url }}">首页</a></li>
+                <li><a href="{{ site.baseurl }}">首页</a></li>
   				{% for category in site.categories %}
                 <li><a href="/categories/{{ category | first }}">{{ category | first }} </a></li>
                 {% endfor %}
             </ul>
         </div>
         <div id="content">
-        	{{ page.content }}
+        	<div id="article_list">
+				<div class="article">
+					<p class="article_title">文章标题</p>
+					<p class="article_property"> 
+						<span class="article_publish_time">2014-04-17</span>
+						<span class="article_author">xzben</span>
+						<span class="article_category">c/c++</span>
+						<span class="article_tag">tags</span>
+					</p>
+					<p class="article_preview">
+						文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容
+					</p>
+				</div>
+			</div>
             <div id="tools">
             	<div class="tool">
                 	<p class="tool_title">Category</p>
@@ -42,7 +55,7 @@
                 	<div class="tool_content">
                     	<ul id="latest_article_list">
 							{% for post in site.posts %}
-							<li><a href="{{ post.url }}">{{ post.title }}</a><span>[{{ post.date | date_to_string }}]</span></li>
+							<li><a href="{{ site.baseuser }}/{{ post.url }}">{{ post.title }}</a><span>[{{ post.date | date_to_string }}]</span></li>
 							{% endfor %}
                         </ul>
                     </div>
