--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -26,18 +26,20 @@
         </div>
         <div id="content">
         	<div id="article_list">
+				{% for post in site.posts %}
 				<div class="article">
-					<p class="article_title">文章标题</p>
+					<p class="article_title">{{ post.title }}</p>
 					<p class="article_property"> 
-						<span class="article_publish_time">2014-04-17</span>
-						<span class="article_author">xzben</span>
-						<span class="article_category">c/c++</span>
-						<span class="article_tag">tags</span>
+						<span class="article_publish_time">{{ post.date | date_to_string }}</span>
+						<span class="article_author">{{ post.author }}]/span>
+						<span class="article_category">{{ post.categories }}</span>
+						<span class="article_tag">{{ post.tag }}</span>
 					</p>
 					<p class="article_preview">
-						文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容文章预览内容
+						{{ post.content }}
 					</p>
 				</div>
+				{% endfor %}
 			</div>
             <div id="tools">
             	<div class="tool">
