--- a/_layouts/article_page.html
+++ b/_layouts/article_page.html
@@ -11,18 +11,7 @@
 </head>
 <body>
 	<div id="wrapper">
-    	<div id="header">
-        	<div class="tag">
-            	<span style="font-size:28px; font-weight:bolder; font-family:Tahoma, Geneva, sans-serif">xzben'Blog</span>
-            	<span style="font-size:12px; color:#333; ">见证我成长的足迹</span>
-            </div>
-            <ul class="menu">
-                <li><a href="{{ site.baseurl }}">首页</a></li>
-  				{% for category in site.categories %}
-                <li><a href="/categories/{{ category | first }}">{{ category | first }} </a></li>
-                {% endfor %}
-            </ul>
-        </div>
+    	{% include header.html %}
         <div id="content">
         	<div id="article_show">
             	<div class="article">
@@ -38,43 +27,10 @@
                     </p>
                 </div>
             </div>
-            <div id="tools">
-            	<div class="tool">
-                	<p class="tool_title">Category</p>
-                	<div class="tool_content">
-                    	<ul id="category">
-                           	{% for category in site.categories %}
-							<li><a href="/categories/{{ category | first }}" title="view all posts">{{ category | first }}<span>({{ category | last | size }})</span></a></li>
-							{% endfor %}
-                        </ul>
-                    </div>
-                </div>
-                <div class="tool">
-                	<p class="tool_title">近期文章</p>
-                	<div class="tool_content">
-                    	<ul id="latest_article_list">
-							{% for post in site.posts %}
-							<li><a href="{{ post.url }}">{{ post.title }}</a><span>[{{ post.date | date_to_string }}]</span></li>
-							{% endfor %}
-                        </ul>
-                    </div>
-                </div>
-                <div class="tool">
-                	<p class="tool_title">我的链接</p>
-                	<div class="tool_content">
-                    	<ul id="my_links">
-                           <li><a href="#">我的链接</a></li>
-                           <li><a href="#">我的链接</a></li>
-                           <li><a href="#">文章名字</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            {% include tools.html %}
             <div class="clear"></div>
         </div>
-        <footer>
-        	&copy;copyright blog.xzben.com 2014
-        </footer>
+		{% include footer.html %}
     </div>
 </body>
 </html>
