--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
-<div id="header">
+ï»¿<div id="header">
 	<div class="tag">
 		<span style="font-size:28px; font-weight:bolder; font-family:Tahoma, Geneva, sans-serif">xzben'Blog</span>
-		<span style="font-size:12px; color:#333; ">¼ûÖ¤ÎÒ³É³¤µÄ×ã¼£</span>
+		<span style="font-size:12px; color:#333; ">è§è¯æˆ‘æˆé•¿çš„è¶³è¿¹</span>
 	</div>
 	<ul class="menu">
-		<li><a href="{{ site.baseurl }}">Ê×Ò³</a></li>
+		<li><a href="{{ site.baseurl }}">é¦–é¡µ</a></li>
 		{% for category in site.categories %}
 		<li><a href="/categories/{{ category | first }}">{{ category | first }} </a></li>
 		{% endfor %}
